Fixed config load errors

--- a/data/lootboxes_weights.cfg
+++ b/data/lootboxes_weights.cfg
@@ -21,7 +21,7 @@
             "firepower"         5   // sets on fire any zombie attacked or that attacks survivor
             "infiniteammo"      5   // survivor gets infinite ammo temporary
             "explosiveshots"    5   // bullet impacts will generate an explosion
-            "thanos"            5   // half of the zombies will be erased and tank health will be halved
+            "infgauntlet"       5   // half of the zombies will be erased and tank health will be halved
             "respawn"           10  // respawns a random dead survivor and teleports to the lootbox
         }
         "negatives"
@@ -56,13 +56,15 @@
             "medical"           10  // includes defibrillator
             "throwables"        45  // includes vomit jar
             "items"             65  // includes firework crate
+            "upgrade"           85  // Spawns an upgrade box
+            "laser"             65  // Spawns a laser box
             "speedbost"         35
             "invulnerability"   10
             "regeneration"      5
             "firepower"         5
             "infiniteammo"      5 
             "explosiveshots"    5
-            "thanos"            5
+            "infgauntlet"       5
             "respawn"           10
         }
         "negatives"
