--- a/data/lootboxes_weights.cfg
+++ b/data/lootboxes_weights.cfg
@@ -8,6 +8,7 @@
         {
             // Each value means the weight of each event when beign choosen
             // Higher height will mean a higher chance to be choosen over the others
+            "ammo"              65  // ammo crate
             "tier1"             35  // smg or pump shotgun
             "tier2"             100 // autoshotgun, rifle or sniper        
             "secondary"         30  // pistols
@@ -26,7 +27,6 @@
         }
         "negatives"
         {
-
             "mob"               100 // spawns a group of zombies that attack survivors
             "panic"             60  // a larger group of zombies with a panic event
             "vomittrap"         100 // box explodes and near survivors will be covered in bile
@@ -41,13 +41,14 @@
             "beartrap"          25  // the opener will be hurted and will start bleeding
             "randangle"         40  // opener angles of vision will change over time
             "fullteam"          85  // a full team of special infected will spawn
-            "titans"            15  // all common infected will be huge and their health is increased
+            "titans"            60  // all common infected are bigger and their health is increased
         }
     }
     "Left4Dead2"
     {
         "positives"
         {
+            "ammo"              65
             "tier1"             35
             "tier2"             100
             "tier3"             15  // M60 or grenade launcher
